Sboot api changes (#22)
* changes required to offload some of the project endpoints to the new springboot service.

* reduce complexity as we will only ever have one issuer so we can trust the user's subject by itself.

* reduce complexity allowed by offloading projects endpoints to springboot.

* adjustments necessary from new springboot api to handle projects endpoints.

* remove ommissions that are no longer relevant.

* decommission endpoint implementations moved to springboot.  remove generated source that should not be checked in.

* remove no longer needed validator

* remove functions that are no longer needed after moving /projects endpoints to new springboot service.

* remove unused import.

* remove implementations moved to springboot api service.

* remove commented code.

* remove items moved to springboot implementation of the projects endpoints.
