# source/main/generated/swagger_server/controllers/project_photo_controller.py
@@ -16,15 +16,14 @@ def add_project_photo(project_id, file_name=None):  # noqa: E501
     :rtype: None
     """
 
-    m_interface = MongoInterface()
     auth = connexion.request.authorization
-    profile_id = m_interface.get_profile_by_issuer_subject(auth["iss"], auth["sub"])["_id"]
+    profile_id = auth["sub"]
 
     m_interface = MongoInterface()
     project = m_interface.get_project(project_id)
 
-    if project["profile_id"] != profile_id:
-        print ("profile ID does not match")
+    if str(project["profileId"]) != profile_id:
+        print ("profile ID does not match ")
         return {"status": 401, "reason": "Not Authorized"}
 
     uploaded_file = connexion.request.files['file']
@@ -39,7 +38,6 @@ def add_project_photo(project_id, file_name=None):  # noqa: E501
     m_interface = MongoInterface()
     inserted_id = m_interface.create_photo(photo.to_dict())
     #TODO, define proper return object and refactor.
-    #return {'id': inserted_id}
     m_interface.append_project_photo(project_id, inserted_id)
 
     return {'id': inserted_id}
