# source/main/generated/swagger_server/models/profile.py
@@ -1,192 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class Profile(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, id: str=None, profile_name: str=None, identity_issuer: str=None, identity_id: str=None, profile_img: str=None, connections: List[str]=None):  # noqa: E501
-        """Profile - a model defined in Swagger
-
-        :param id: The id of this Profile.  # noqa: E501
-        :type id: str
-        :param profile_name: The profile_name of this Profile.  # noqa: E501
-        :type profile_name: str
-        :param identity_issuer: The identity_issuer of this Profile.  # noqa: E501
-        :type identity_issuer: str
-        :param identity_id: The identity_id of this Profile.  # noqa: E501
-        :type identity_id: str
-        :param profile_img: The profile_img of this Profile.  # noqa: E501
-        :type profile_img: str
-        :param connections: The connections of this Profile.  # noqa: E501
-        :type connections: List[str]
-        """
-        self.swagger_types = {
-            'id': str,
-            'profile_name': str,
-            'identity_issuer': str,
-            'identity_id': str,
-            'profile_img': str,
-            'connections': List[str]
-        }
-
-        self.attribute_map = {
-            'id': '_id',
-            'profile_name': 'profile_name',
-            'identity_issuer': 'identity_issuer',
-            'identity_id': 'identity_id',
-            'profile_img': 'profile_img',
-            'connections': 'connections'
-        }
-        self._id = id
-        self._profile_name = profile_name
-        self._identity_issuer = identity_issuer
-        self._identity_id = identity_id
-        self._profile_img = profile_img
-        self._connections = connections
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Profile':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Profile of this Profile.  # noqa: E501
-        :rtype: Profile
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def id(self) -> str:
-        """Gets the id of this Profile.
-
-
-        :return: The id of this Profile.
-        :rtype: str
-        """
-        return self._id
-
-    @id.setter
-    def id(self, id: str):
-        """Sets the id of this Profile.
-
-
-        :param id: The id of this Profile.
-        :type id: str
-        """
-
-        self._id = id
-
-    @property
-    def profile_name(self) -> str:
-        """Gets the profile_name of this Profile.
-
-
-        :return: The profile_name of this Profile.
-        :rtype: str
-        """
-        return self._profile_name
-
-    @profile_name.setter
-    def profile_name(self, profile_name: str):
-        """Sets the profile_name of this Profile.
-
-
-        :param profile_name: The profile_name of this Profile.
-        :type profile_name: str
-        """
-
-        self._profile_name = profile_name
-
-    @property
-    def identity_issuer(self) -> str:
-        """Gets the identity_issuer of this Profile.
-
-
-        :return: The identity_issuer of this Profile.
-        :rtype: str
-        """
-        return self._identity_issuer
-
-    @identity_issuer.setter
-    def identity_issuer(self, identity_issuer: str):
-        """Sets the identity_issuer of this Profile.
-
-
-        :param identity_issuer: The identity_issuer of this Profile.
-        :type identity_issuer: str
-        """
-
-        self._identity_issuer = identity_issuer
-
-    @property
-    def identity_id(self) -> str:
-        """Gets the identity_id of this Profile.
-
-
-        :return: The identity_id of this Profile.
-        :rtype: str
-        """
-        return self._identity_id
-
-    @identity_id.setter
-    def identity_id(self, identity_id: str):
-        """Sets the identity_id of this Profile.
-
-
-        :param identity_id: The identity_id of this Profile.
-        :type identity_id: str
-        """
-
-        self._identity_id = identity_id
-
-    @property
-    def profile_img(self) -> str:
-        """Gets the profile_img of this Profile.
-
-
-        :return: The profile_img of this Profile.
-        :rtype: str
-        """
-        return self._profile_img
-
-    @profile_img.setter
-    def profile_img(self, profile_img: str):
-        """Sets the profile_img of this Profile.
-
-
-        :param profile_img: The profile_img of this Profile.
-        :type profile_img: str
-        """
-
-        self._profile_img = profile_img
-
-    @property
-    def connections(self) -> List[str]:
-        """Gets the connections of this Profile.
-
-
-        :return: The connections of this Profile.
-        :rtype: List[str]
-        """
-        return self._connections
-
-    @connections.setter
-    def connections(self, connections: List[str]):
-        """Sets the connections of this Profile.
-
-
-        :param connections: The connections of this Profile.
-        :type connections: List[str]
-        """
-
-        self._connections = connections
