# source/main/generated/swagger_server/models/project_day.py
@@ -1,192 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class ProjectDay(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, id: str=None, summary: str=None, description: str=None, location: str=None, datestmp: str=None, photos: List[str]=None):  # noqa: E501
-        """ProjectDay - a model defined in Swagger
-
-        :param id: The id of this ProjectDay.  # noqa: E501
-        :type id: str
-        :param summary: The summary of this ProjectDay.  # noqa: E501
-        :type summary: str
-        :param description: The description of this ProjectDay.  # noqa: E501
-        :type description: str
-        :param location: The location of this ProjectDay.  # noqa: E501
-        :type location: str
-        :param datestmp: The datestmp of this ProjectDay.  # noqa: E501
-        :type datestmp: str
-        :param photos: The photos of this ProjectDay.  # noqa: E501
-        :type photos: List[str]
-        """
-        self.swagger_types = {
-            'id': str,
-            'summary': str,
-            'description': str,
-            'location': str,
-            'datestmp': str,
-            'photos': List[str]
-        }
-
-        self.attribute_map = {
-            'id': 'id',
-            'summary': 'summary',
-            'description': 'description',
-            'location': 'location',
-            'datestmp': 'datestmp',
-            'photos': 'photos'
-        }
-        self._id = id
-        self._summary = summary
-        self._description = description
-        self._location = location
-        self._datestmp = datestmp
-        self._photos = photos
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ProjectDay':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ProjectDay of this ProjectDay.  # noqa: E501
-        :rtype: ProjectDay
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def id(self) -> str:
-        """Gets the id of this ProjectDay.
-
-
-        :return: The id of this ProjectDay.
-        :rtype: str
-        """
-        return self._id
-
-    @id.setter
-    def id(self, id: str):
-        """Sets the id of this ProjectDay.
-
-
-        :param id: The id of this ProjectDay.
-        :type id: str
-        """
-
-        self._id = id
-
-    @property
-    def summary(self) -> str:
-        """Gets the summary of this ProjectDay.
-
-
-        :return: The summary of this ProjectDay.
-        :rtype: str
-        """
-        return self._summary
-
-    @summary.setter
-    def summary(self, summary: str):
-        """Sets the summary of this ProjectDay.
-
-
-        :param summary: The summary of this ProjectDay.
-        :type summary: str
-        """
-
-        self._summary = summary
-
-    @property
-    def description(self) -> str:
-        """Gets the description of this ProjectDay.
-
-
-        :return: The description of this ProjectDay.
-        :rtype: str
-        """
-        return self._description
-
-    @description.setter
-    def description(self, description: str):
-        """Sets the description of this ProjectDay.
-
-
-        :param description: The description of this ProjectDay.
-        :type description: str
-        """
-
-        self._description = description
-
-    @property
-    def location(self) -> str:
-        """Gets the location of this ProjectDay.
-
-
-        :return: The location of this ProjectDay.
-        :rtype: str
-        """
-        return self._location
-
-    @location.setter
-    def location(self, location: str):
-        """Sets the location of this ProjectDay.
-
-
-        :param location: The location of this ProjectDay.
-        :type location: str
-        """
-
-        self._location = location
-
-    @property
-    def datestmp(self) -> str:
-        """Gets the datestmp of this ProjectDay.
-
-
-        :return: The datestmp of this ProjectDay.
-        :rtype: str
-        """
-        return self._datestmp
-
-    @datestmp.setter
-    def datestmp(self, datestmp: str):
-        """Sets the datestmp of this ProjectDay.
-
-
-        :param datestmp: The datestmp of this ProjectDay.
-        :type datestmp: str
-        """
-
-        self._datestmp = datestmp
-
-    @property
-    def photos(self) -> List[str]:
-        """Gets the photos of this ProjectDay.
-
-
-        :return: The photos of this ProjectDay.
-        :rtype: List[str]
-        """
-        return self._photos
-
-    @photos.setter
-    def photos(self, photos: List[str]):
-        """Sets the photos of this ProjectDay.
-
-
-        :param photos: The photos of this ProjectDay.
-        :type photos: List[str]
-        """
-
-        self._photos = photos
